<resources>
    <string name="app_name">ProjectMang</string>
    <string name="project_managment">Project Managment</string>

    <string name="let_s_get_started">Let \'S Get Started </string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="not_having_account">Not having account</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nav_profile">My Profile</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="content">Pass value</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board Name</string>
</resources>