<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="6dp"
    android:scrollbarThumbVertical="@null"
    tools:context=".activities.IntroActivity">

     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">

         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:id="@+id/toolbar_sign_up_activity"
             android:layout_height="?attr/actionBarSize">

             <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/tv_tittle"
                 android:gravity="center_vertical"
                 android:layout_height="match_parent"/>

         </androidx.appcompat.widget.Toolbar>




         <androidx.cardview.widget.CardView
             xmlns:Card_View="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"

             android:padding="10dp"
             Card_View:cardCornerRadius="5dp"
             Card_View:cardElevation="5dp">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="5dp"
                 android:orientation="vertical">

                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/nameError"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp">

                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/et_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="@string/name"
                         android:inputType="textNoSuggestions"
                         android:maxLines="1"
                         android:paddingStart="5dp"
                         android:singleLine="true"/>

                 </com.google.android.material.textfield.TextInputLayout>

                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/emailError"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp">

                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/et_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="@string/prompt_email"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:paddingStart="5dp"
                         android:singleLine="true"/>

                 </com.google.android.material.textfield.TextInputLayout>

<!--                 <com.google.android.material.textfield.TextInputLayout-->
<!--                     android:id="@+id/phoneError"-->
<!--                     android:layout_width="match_parent"-->
<!--                     android:layout_height="wrap_content"-->
<!--                     android:layout_marginTop="5dp">-->

<!--                     <androidx.appcompat.widget.AppCompatEditText-->
<!--                         android:id="@+id/et_phone"-->
<!--                         android:layout_width="match_parent"-->
<!--                         android:layout_height="wrap_content"-->
<!--                         android:layout_marginTop="10dp"-->
<!--                         android:hint="@string/phone_number"-->
<!--                         android:maxLength="12"-->
<!--                         android:inputType="number"-->
<!--                         android:maxLines="1"-->
<!--                         android:paddingStart="5dp"-->
<!--                         android:singleLine="true"/>-->

<!--                 </com.google.android.material.textfield.TextInputLayout>-->

                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/passError"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:passwordToggleEnabled="true"
                     android:layout_marginTop="5dp">

                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/et_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="@string/prompt_password"
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:paddingStart="5dp"
                         android:singleLine="true"/>

                 </com.google.android.material.textfield.TextInputLayout>

                 <Button
                     android:id="@+id/register"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="20dp"
                     android:background="@drawable/shape_button_rounded"
                     android:text="@string/register"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"/>

                 <TextView
                     android:id="@+id/signUpUser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:gravity="center"
                     android:text="@string/not_register"
                     android:textColor="@color/purple_700"
                     android:textSize="16sp"/>

             </LinearLayout>
         </androidx.cardview.widget.CardView>




     </LinearLayout>



</ScrollView>